objects/Nebula__LoggerSObjectHandler__mdt.object
<CustomObject>
    <description>Used to configure the Apex trigger handler classes that run on the objects LogEntryEvent__e, Log__c and LogEntry__c</description>
    <fields>
        <fullName>Nebula__IsEnabled__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>Controls if the SObject&apos;s trigger handler class should execute. This is useful for temporary disabling the logger&apos;s trigger handlers, but should typically be enabled.</description>
        <inlineHelpText>Controls if the SObject&apos;s trigger handler class should execute. This is useful for temporary disabling the logger&apos;s trigger handlers, but should typically be enabled.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__SObjectHandlerApexClass__c</fullName>
        <complianceGroup>None</complianceGroup>
        <inlineHelpText>The Apex class that extends the abstract LoggerSObjectHandler for the specified SObject Type</inlineHelpText>
        <label>Trigger Handler Apex Class</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nebula__SObjectTypeOverride__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>Not all base platform types can be selected using the SObjectType picklist. If your object is not supported, supply the API name for the object here instead.</description>
        <inlineHelpText>Not all base platform types can be selected using the SObjectType picklist. If your object is not supported, supply the API name for the object here instead.</inlineHelpText>
        <label>SObjectType Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SObject Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Logger SObject Handler Configurations</relationshipLabel>
        <relationshipName>LoggerSObjectHandlerConfigurations</relationshipName>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <label>Logger SObject Handler</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Nebula__IsEnabled__c</columns>
        <columns>Nebula__SObjectType__c</columns>
        <columns>Nebula__SObjectTypeOverride__c</columns>
        <columns>Nebula__SObjectHandlerApexClass__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Logger SObject Handlers</pluralLabel>
</CustomObject>